dbt: Re-organize DWH structure

--- a/airbnb/dbt/airbnb/dbt_project.yml
+++ b/airbnb/dbt/airbnb/dbt_project.yml
@@ -33,4 +33,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   airbnb:
-    +materialized: view
+    staging:
+      schema: staging
+      materialized: view
+    prod:
+      schema: prod
+      materialized: table
