--- a/airbnb/requirements.txt
+++ b/airbnb/requirements.txt
@@ -1,4 +1,5 @@
+db-dtypes==1.1.1
 dbt-core==1.4.5
 dbt-bigquery==1.4.3
-google-cloud-bigquery==3.7.0
-google-cloud-storage==2.7.0
+google-cloud-bigquery==3.9.0
+google-cloud-storage==2.8.0
